[package]
name = "mm-liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings-mm = { path = "./crates/bindings-mm" }
artemis-core = { path = "../artemis-core"}
alloy = { version = "0.7.3", features = ["full"] }
alloy-primitives = "0.8.11"
tokio = { version = "1.18", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", features = ["derive"] }
phyllo = "0.3.0"
serde = "1.0.168"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
tokio-stream = "0.1.14"
reqwest = "0.11.18"
serde_qs = "0.12.0"
async-stream = "0.3.5"
mockito = "1.1.0"
serde_json = "1.0.105"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.10"